# IES_TEST

./: .gitignore  README.md
app/: globals.css  layout.tsx
app/projects/: page.tsx
components/: CqeWeeklySummaryTool.tsx
docs/: 開發清單.md
docs/design_principles/: INDEX.md  ui_導覽教學設計原則.md
lib/: cqeWeeklyFeedback.ts  export.ts  hash.ts  schemas.ts
marquee_tool/: README.md  app.js  index.html  styles.css
prisma/: seed.ts
project_cqe_qnrhelper/: README.md  pyproject.toml  系統架構圖說明.md
project_cqe_qnrhelper/src/automotive_prefill_ai/: cli.py
project_cqe_qnrhelper/src/automotive_prefill_ai/config/: __init__.py
project_cqe_qnrhelper/src/automotive_prefill_ai/models/: questionnaire.py
project_cqe_qnrhelper/src/automotive_prefill_ai/parsing/: __init__.py
project_cqe_qnrhelper/tests/: test_excel_parser.py
project_cqe_wkreport/: README.md  index.html
project_cqe_wkreport/V7/: index.HTML  main.js
project_cqe_wkreport/data/: api-config.json  v7-master-data.json  version-log.json
project_marquee_tool/: README.md  app.js  index.html
project_naval_generator/: README.md  app.js  index.html  package.json  styles.css
project_naval_generator/app/: globals.css  layout.tsx
project_naval_generator/app/projects/: page.tsx
project_naval_generator/components/: QuestionRound.tsx  StageHeader.tsx
project_naval_generator/lib/: data-dir.ts  hash.ts  llm.ts
projects/: README.md
projects/active/project_naval_generator/: .env.example  index.html  styles.css  tailwind.config.ts
projects/archive/project_game/: whack_a_mole.py
scripts/: start-local.mjs
(+89 files in other folders)
